# PocketClaw

./: .gitignore  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src/components/: ChannelsView.tsx  Dashboard.tsx  MemoryView.tsx  ProfileView.tsx  ProvidersView.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusView.tsx  Titlebar.tsx  ToastContainer.tsx  ToolsView.tsx  WorkspaceView.tsx
src/components/settings/: AdvancedTab.tsx  AgentTab.tsx  AutonomyTab.tsx  CostTab.tsx  GeneralTab.tsx  IntegrationsTab.tsx  MemoryTab.tsx  NetworkTab.tsx  RoutingTab.tsx  RuntimeTab.tsx  SecurityTab.tsx  ToolsTab.tsx  shared.tsx  types.ts
zeroclaw_engine/src/: lib.rs
zeroclaw_engine/src/agent/: agent.rs  loop_.rs
zeroclaw_engine/src/channels/: mod.rs
zeroclaw_engine/src/gateway/: sse.rs
zeroclaw_engine/src/observability/: log.rs  otel.rs  prometheus.rs  traits.rs  verbose.rs
zeroclaw_engine/src/providers/: mod.rs
zeroclaw_engine/src/tools/: mod.rs
