[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
thiserror = "2.0.18"
keyring = { version = "3.6.3", features = ["windows-native", "apple-native", "linux-native"] }
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json"] }
zeroclaw_engine = { path = "../zeroclaw_engine", package = "zeroclaw" }
sysinfo = "0.38.2"
chrono = "0.4.44"

